# molgenis_apps-legacy

./: .classpath  .classpath.template.xml  .gitignore  README.md  build_animaldb.xml  build_bbmri.xml  build_bbmriOmicsconnect.xml  build_bioshare.xml  build_catalogue.xml  build_cbm.xml  build_cbm_omx.xml  build_chado.xml  build_chd7.xml  build_col7a1.xml  build_common.xml  build_compute.xml  build_designgg.xml  build_euratrans.xml  build_examples.xml  build_filemanager.xml  build_gcc.xml  build_gcc_jpa.xml  build_gids.xml  build_gonl.xml  build_gonl_pheno.xml  build_hemodb.xml  build_ibdportal.xml  build_knowledgecenter.xml  build_lifelines.xml  build_lifelinesresearchportal.xml  build_myo5b.xml  build_ngs.xml  build_omicsconnect.xml  build_patho.xml  build_pheno.xml  build_phenoflow.xml  build_plantqtl.xml  build_sandbox.xml  build_scrum.xml  build_tifn.xml  (+16 more)
modules/compute/demo/demoWorkflow/source/bwa-0.5.8c_patched/: 20130129_simMachine_0001_FLOWCELL_L1_None_1.fq  ChangeLog  Makefile.am  Makefile.in  NEWS  bwa  bwaseqio.c  bwtaln.h  bwtsw2_aux.c  bwtsw2_core.c  cleanup.sh  config.h  main.c
modules/compute/demo/demoWorkflow/source/bwa-0.5.8c_patched/.deps/: bntseq.Po  bwaseqio.Po  bwt.Po  bwt_lite.Po  bwtaln.Po  bwtio.Po  bwtsw2_aux.Po  bwtsw2_chain.Po  bwtsw2_core.Po  bwtsw2_main.Po  cs2nt.Po  kstring.Po  main.Po  simple_dp.Po  stdaln.Po  utils.Po
modules/compute/demo/demoWorkflow/source/bwa-0.5.8c_patched/autom4te.cache/: requests  traces.0
modules/compute/demo/demoWorkflow/source/bwa-0.5.8c_patched/bwt_gen/: Makefile  Makefile.in
modules/compute/demo/demoWorkflow/source/bwa-0.5.8c_patched/bwt_gen/.deps/: QSufSort.Po  bwt_gen.Po
modules/compute/demo/variantTableInQCReport/root/tools/bwa-0.5.8c_patched/: INSTALL  Makefile  bntseq.h  bwa  bwa.1  configure.in  sracsfq2fq.pl
(+2523 files in other folders)
